Update Pipfile to add FastAPI

--- a/notebooks/experiment_tracking.ipynb
+++ b/notebooks/experiment_tracking.ipynb
@@ -200,17 +200,17 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024/10/01 18:48:53 INFO mlflow.tracking._tracking_service.client: 🏃 View run enchanting-horse-48 at: http://localhost:5000/#/experiments/1/runs/35f4418b69204731a7992bbceab8b699.\n",
-      "2024/10/01 18:48:53 INFO mlflow.tracking._tracking_service.client: 🧪 View experiment at: http://localhost:5000/#/experiments/1.\n"
+      "2024/10/07 17:15:28 INFO mlflow.tracking._tracking_service.client: 🏃 View run nervous-wolf-105 at: http://localhost:5000/#/experiments/1/runs/d066724eba6d4306a86e866df7fb6089.\n",
+      "2024/10/07 17:15:28 INFO mlflow.tracking._tracking_service.client: 🧪 View experiment at: http://localhost:5000/#/experiments/1.\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "mse:6.289281356557213, mae:1.296352303483074\n",
+      "mse:6.329237439903726, mae:1.2972006042550785\n",
       "Experiment ID: 1\n",
-      "Run ID: 35f4418b69204731a7992bbceab8b699\n"
+      "Run ID: d066724eba6d4306a86e866df7fb6089\n"
      ]
     },
     {
@@ -734,19 +734,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "mse:5.607716789422468, mae:1.1369348230103606        \n",
+      "mse:5.604520301839405, mae:1.137925878715522         \n",
       "Experiment ID: 1                                     \n",
-      "Run ID: 21a3fdda83cb4628a262089046d04e6f             \n",
-      "  0%|          | 0/5 [00:05<?, ?trial/s, best loss=?]"
+      "Run ID: b6b0f0cd1f4b48dbaa099a0b0c991c98             \n",
+      "  0%|          | 0/5 [00:07<?, ?trial/s, best loss=?]"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024/10/01 18:48:58 INFO mlflow.tracking._tracking_service.client: 🏃 View run merciful-hen-497 at: http://localhost:5000/#/experiments/1/runs/21a3fdda83cb4628a262089046d04e6f.\n",
+      "2024/10/07 17:15:36 INFO mlflow.tracking._tracking_service.client: 🏃 View run blushing-toad-119 at: http://localhost:5000/#/experiments/1/runs/b6b0f0cd1f4b48dbaa099a0b0c991c98.\n",
       "\n",
-      "2024/10/01 18:48:58 INFO mlflow.tracking._tracking_service.client: 🧪 View experiment at: http://localhost:5000/#/experiments/1.\n",
+      "2024/10/07 17:15:36 INFO mlflow.tracking._tracking_service.client: 🧪 View experiment at: http://localhost:5000/#/experiments/1.\n",
       "\n"
      ]
     },
@@ -754,19 +754,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "mse:5.613260017097721, mae:1.1434583442600765                                 \n",
+      "mse:5.986152843299827, mae:1.2534191473194856                                 \n",
       "Experiment ID: 1                                                              \n",
-      "Run ID: 7ed2bdb10c604db591697ce4bd01fb78                                      \n",
-      " 20%|██        | 1/5 [00:10<00:21,  5.35s/trial, best loss: 5.607716789422468]"
+      "Run ID: c3342dd507934bc2b2e533cc63ed5aff                                      \n",
+      " 20%|██        | 1/5 [00:11<00:29,  7.47s/trial, best loss: 5.604520301839405]"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024/10/01 18:49:04 INFO mlflow.tracking._tracking_service.client: 🏃 View run puzzled-mole-227 at: http://localhost:5000/#/experiments/1/runs/7ed2bdb10c604db591697ce4bd01fb78.\n",
+      "2024/10/07 17:15:40 INFO mlflow.tracking._tracking_service.client: 🏃 View run indecisive-yak-109 at: http://localhost:5000/#/experiments/1/runs/c3342dd507934bc2b2e533cc63ed5aff.\n",
       "\n",
-      "2024/10/01 18:49:04 INFO mlflow.tracking._tracking_service.client: 🧪 View experiment at: http://localhost:5000/#/experiments/1.\n",
+      "2024/10/07 17:15:40 INFO mlflow.tracking._tracking_service.client: 🧪 View experiment at: http://localhost:5000/#/experiments/1.\n",
       "\n"
      ]
     },
@@ -774,19 +774,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "mse:5.615241530244941, mae:1.1384594166381286                                 \n",
+      "mse:5.591607948671723, mae:1.1349545414592168                                 \n",
       "Experiment ID: 1                                                              \n",
-      "Run ID: a9634ce5c9d0442fb74cf81e07b1d318                                      \n",
-      " 40%|████      | 2/5 [00:17<00:15,  5.31s/trial, best loss: 5.607716789422468]"
+      "Run ID: 81bc0f19c7854ce1a2f9b0a88999572d                                      \n",
+      " 40%|████      | 2/5 [00:18<00:16,  5.58s/trial, best loss: 5.604520301839405]"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024/10/01 18:49:11 INFO mlflow.tracking._tracking_service.client: 🏃 View run invincible-doe-215 at: http://localhost:5000/#/experiments/1/runs/a9634ce5c9d0442fb74cf81e07b1d318.\n",
+      "2024/10/07 17:15:47 INFO mlflow.tracking._tracking_service.client: 🏃 View run fortunate-shrimp-481 at: http://localhost:5000/#/experiments/1/runs/81bc0f19c7854ce1a2f9b0a88999572d.\n",
       "\n",
-      "2024/10/01 18:49:11 INFO mlflow.tracking._tracking_service.client: 🧪 View experiment at: http://localhost:5000/#/experiments/1.\n",
+      "2024/10/07 17:15:47 INFO mlflow.tracking._tracking_service.client: 🧪 View experiment at: http://localhost:5000/#/experiments/1.\n",
       "\n"
      ]
     },
@@ -794,19 +794,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "mse:5.652889742199179, mae:1.1554750474626179                                 \n",
+      "mse:5.638042646661946, mae:1.1435553012204531                                 \n",
       "Experiment ID: 1                                                              \n",
-      "Run ID: 6477a99f779d4f3bb5f806cee96a0ed5                                      \n",
-      " 60%|██████    | 3/5 [00:21<00:12,  6.01s/trial, best loss: 5.607716789422468]"
+      "Run ID: 1a847a4d692d4d62b8a72d5abc1c8153                                      \n",
+      " 60%|██████    | 3/5 [00:23<00:12,  6.16s/trial, best loss: 5.591607948671723]"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024/10/01 18:49:14 INFO mlflow.tracking._tracking_service.client: 🏃 View run ambitious-ray-837 at: http://localhost:5000/#/experiments/1/runs/6477a99f779d4f3bb5f806cee96a0ed5.\n",
+      "2024/10/07 17:15:52 INFO mlflow.tracking._tracking_service.client: 🏃 View run abundant-duck-571 at: http://localhost:5000/#/experiments/1/runs/1a847a4d692d4d62b8a72d5abc1c8153.\n",
       "\n",
-      "2024/10/01 18:49:14 INFO mlflow.tracking._tracking_service.client: 🧪 View experiment at: http://localhost:5000/#/experiments/1.\n",
+      "2024/10/07 17:15:52 INFO mlflow.tracking._tracking_service.client: 🧪 View experiment at: http://localhost:5000/#/experiments/1.\n",
       "\n"
      ]
     },
@@ -814,19 +814,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "mse:5.635654425072378, mae:1.1456452906489734                                 \n",
+      "mse:5.708761416247301, mae:1.1772508881197958                                 \n",
       "Experiment ID: 1                                                              \n",
-      "Run ID: be85a1cf18c747b5978e0cd9f6d67e06                                      \n",
-      " 80%|████████  | 4/5 [00:26<00:05,  5.09s/trial, best loss: 5.607716789422468]"
+      "Run ID: b3c086aadcd74006b260d0a88cca1352                                      \n",
+      " 80%|████████  | 4/5 [00:25<00:05,  5.84s/trial, best loss: 5.591607948671723]"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024/10/01 18:49:19 INFO mlflow.tracking._tracking_service.client: 🏃 View run monumental-gnat-187 at: http://localhost:5000/#/experiments/1/runs/be85a1cf18c747b5978e0cd9f6d67e06.\n",
+      "2024/10/07 17:15:54 INFO mlflow.tracking._tracking_service.client: 🏃 View run big-bat-679 at: http://localhost:5000/#/experiments/1/runs/b3c086aadcd74006b260d0a88cca1352.\n",
       "\n",
-      "2024/10/01 18:49:19 INFO mlflow.tracking._tracking_service.client: 🧪 View experiment at: http://localhost:5000/#/experiments/1.\n",
+      "2024/10/07 17:15:54 INFO mlflow.tracking._tracking_service.client: 🧪 View experiment at: http://localhost:5000/#/experiments/1.\n",
       "\n"
      ]
     },
@@ -834,7 +834,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 5/5 [00:26<00:00,  5.26s/trial, best loss: 5.607716789422468]\n"
+      "100%|██████████| 5/5 [00:25<00:00,  5.16s/trial, best loss: 5.591607948671723]\n"
      ]
     }
    ],
@@ -859,32 +859,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "mse:5.617175218019595, mae:1.1451148460671625\n"
+      "mse:5.596756605910697, mae:1.1367479341078124\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Downloading artifacts: 100%|██████████| 7/7 [00:02<00:00,  2.76it/s]\n",
-      "2024/10/01 19:14:09 INFO mlflow.tracking._tracking_service.client: 🏃 View run abundant-robin-847 at: http://localhost:5000/#/experiments/1/runs/0128e9a17e874cdbb8e309e16ed1c02b.\n",
-      "2024/10/01 19:14:09 INFO mlflow.tracking._tracking_service.client: 🧪 View experiment at: http://localhost:5000/#/experiments/1.\n"
+      "/home/codespace/.local/share/virtualenvs/mlops-student-performance-Zsm4y_dL/lib/python3.12/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n",
+      "Downloading artifacts: 100%|██████████| 7/7 [00:02<00:00,  2.88it/s]\n",
+      "2024/10/07 17:16:12 INFO mlflow.tracking._tracking_service.client: 🏃 View run upset-conch-683 at: http://localhost:5000/#/experiments/1/runs/60d4d8659a054b61bafbaa8c6c27d3cf.\n",
+      "2024/10/07 17:16:12 INFO mlflow.tracking._tracking_service.client: 🧪 View experiment at: http://localhost:5000/#/experiments/1.\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "artifact_uri: mlflow-artifacts:/1/0128e9a17e874cdbb8e309e16ed1c02b/artifacts\n",
+      "artifact_uri: mlflow-artifacts:/1/60d4d8659a054b61bafbaa8c6c27d3cf/artifacts\n",
       "Experiment ID: 1\n",
-      "Run ID: 0128e9a17e874cdbb8e309e16ed1c02b\n"
+      "Run ID: 60d4d8659a054b61bafbaa8c6c27d3cf\n"
      ]
     }
    ],
