Update notebook to create a new model

--- a/notebooks/mlflow_client.ipynb
+++ b/notebooks/mlflow_client.ipynb
@@ -257,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -270,26 +270,26 @@
       " #   Column                      Non-Null Count  Dtype  \n",
       "---  ------                      --------------  -----  \n",
       " 0   Hours_Studied               1 non-null      float64\n",
-      " 1   Attendance                  1 non-null      int64  \n",
-      " 2   Parental_Involvement        1 non-null      object \n",
-      " 3   Access_to_Resources         1 non-null      object \n",
-      " 4   Extracurricular_Activities  1 non-null      object \n",
+      " 1   Attendance                  1 non-null      float64\n",
+      " 2   Parental_Involvement        1 non-null      float64\n",
+      " 3   Access_to_Resources         1 non-null      float64\n",
+      " 4   Extracurricular_Activities  1 non-null      float64\n",
       " 5   Sleep_Hours                 1 non-null      float64\n",
       " 6   Previous_Scores             1 non-null      float64\n",
-      " 7   Motivation_Level            1 non-null      object \n",
-      " 8   Internet_Access             1 non-null      object \n",
-      " 9   Tutoring_Sessions           1 non-null      int64  \n",
-      " 10  Family_Income               1 non-null      object \n",
-      " 11  Teacher_Quality             1 non-null      object \n",
-      " 12  School_Type                 1 non-null      object \n",
-      " 13  Peer_Influence              1 non-null      object \n",
+      " 7   Motivation_Level            1 non-null      float64\n",
+      " 8   Internet_Access             1 non-null      float64\n",
+      " 9   Tutoring_Sessions           1 non-null      float64\n",
+      " 10  Family_Income               1 non-null      float64\n",
+      " 11  Teacher_Quality             1 non-null      float64\n",
+      " 12  School_Type                 1 non-null      float64\n",
+      " 13  Peer_Influence              1 non-null      float64\n",
       " 14  Physical_Activity           1 non-null      float64\n",
-      " 15  Learning_Disabilities       1 non-null      object \n",
-      " 16  Parental_Education_Level    1 non-null      object \n",
-      " 17  Distance_from_Home          1 non-null      object \n",
-      " 18  Gender                      1 non-null      object \n",
-      "dtypes: float64(4), int64(2), object(13)\n",
-      "memory usage: 284.0+ bytes\n"
+      " 15  Learning_Disabilities       1 non-null      float64\n",
+      " 16  Parental_Education_Level    1 non-null      float64\n",
+      " 17  Distance_from_Home          1 non-null      float64\n",
+      " 18  Gender                      1 non-null      float64\n",
+      "dtypes: float64(19)\n",
+      "memory usage: 284.0 bytes\n"
      ]
     }
    ],
@@ -297,40 +297,30 @@
     "cat_cols = input_data.select_dtypes(include=['object', 'category']).columns\n",
     "ord_encoder = OrdinalEncoder()\n",
     "input_data.loc[:, cat_cols] = ord_encoder.fit_transform(input_data[cat_cols])\n",
-    "input_data.info()\n"
+    "input_data = input_data.astype('float64')\n",
+    "input_data.info()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
-     "ename": "MlflowException",
-     "evalue": "Failed to enforce schema of data '   Hours_Studied  Attendance Parental_Involvement Access_to_Resources  \\\n0           10.5          95                  0.0                 0.0   \n\n  Extracurricular_Activities  Sleep_Hours  Previous_Scores Motivation_Level  \\\n0                        0.0          7.5             85.5              0.0   \n\n  Internet_Access  Tutoring_Sessions Family_Income Teacher_Quality  \\\n0             0.0                  2           0.0             0.0   \n\n  School_Type Peer_Influence  Physical_Activity Learning_Disabilities  \\\n0         0.0            0.0                3.5                   0.0   \n\n  Parental_Education_Level Distance_from_Home Gender  \n0                      0.0                0.0    0.0  ' with schema '['Hours_Studied': double (required), 'Attendance': double (required), 'Parental_Involvement': double (required), 'Access_to_Resources': double (required), 'Extracurricular_Activities': double (required), 'Sleep_Hours': double (required), 'Previous_Scores': double (required), 'Motivation_Level': double (required), 'Internet_Access': double (required), 'Tutoring_Sessions': double (required), 'Family_Income': double (required), 'Teacher_Quality': double (required), 'School_Type': double (required), 'Peer_Influence': double (required), 'Physical_Activity': double (required), 'Learning_Disabilities': double (required), 'Parental_Education_Level': double (required), 'Distance_from_Home': double (required), 'Gender': double (required)]'. Error: Incompatible input types for column Attendance. Can not safely convert int64 to float64.",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mMlflowException\u001b[0m                           Traceback (most recent call last)",
-      "File \u001b[0;32m~/.local/share/virtualenvs/mlops-student-performance-Zsm4y_dL/lib/python3.12/site-packages/mlflow/pyfunc/__init__.py:667\u001b[0m, in \u001b[0;36m_validate_prediction_input\u001b[0;34m(data, params, input_schema, params_schema, flavor)\u001b[0m\n\u001b[1;32m    666\u001b[0m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[0;32m--> 667\u001b[0m     data \u001b[38;5;241m=\u001b[39m \u001b[43m_enforce_schema\u001b[49m\u001b[43m(\u001b[49m\u001b[43mdata\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43minput_schema\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mflavor\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    668\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mException\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m e:\n\u001b[1;32m    669\u001b[0m     \u001b[38;5;66;03m# Include error in message for backwards compatibility\u001b[39;00m\n",
-      "File \u001b[0;32m~/.local/share/virtualenvs/mlops-student-performance-Zsm4y_dL/lib/python3.12/site-packages/mlflow/models/utils.py:1192\u001b[0m, in \u001b[0;36m_enforce_schema\u001b[0;34m(pf_input, input_schema, flavor)\u001b[0m\n\u001b[1;32m   1189\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[1;32m   1190\u001b[0m     \u001b[38;5;66;03m# pf_input must be a pandas Dataframe at this point\u001b[39;00m\n\u001b[1;32m   1191\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m (\n\u001b[0;32m-> 1192\u001b[0m         \u001b[43m_enforce_named_col_schema\u001b[49m\u001b[43m(\u001b[49m\u001b[43mpf_input\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43minput_schema\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m   1193\u001b[0m         \u001b[38;5;28;01mif\u001b[39;00m input_schema\u001b[38;5;241m.\u001b[39mhas_input_names()\n\u001b[1;32m   1194\u001b[0m         \u001b[38;5;28;01melse\u001b[39;00m _enforce_unnamed_col_schema(pf_input, input_schema)\n\u001b[1;32m   1195\u001b[0m     )\n",
-      "File \u001b[0;32m~/.local/share/virtualenvs/mlops-student-performance-Zsm4y_dL/lib/python3.12/site-packages/mlflow/models/utils.py:899\u001b[0m, in \u001b[0;36m_enforce_named_col_schema\u001b[0;34m(pf_input, input_schema)\u001b[0m\n\u001b[1;32m    898\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(input_type, DataType):\n\u001b[0;32m--> 899\u001b[0m     new_pf_input[name] \u001b[38;5;241m=\u001b[39m \u001b[43m_enforce_mlflow_datatype\u001b[49m\u001b[43m(\u001b[49m\u001b[43mname\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mpf_input\u001b[49m\u001b[43m[\u001b[49m\u001b[43mname\u001b[49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43minput_type\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    900\u001b[0m \u001b[38;5;66;03m# If the input_type is objects/arrays/maps, we assume pf_input must be a pandas DataFrame.\u001b[39;00m\n\u001b[1;32m    901\u001b[0m \u001b[38;5;66;03m# Otherwise, the schema is not valid.\u001b[39;00m\n\u001b[1;32m    902\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n",
-      "File \u001b[0;32m~/.local/share/virtualenvs/mlops-student-performance-Zsm4y_dL/lib/python3.12/site-packages/mlflow/models/utils.py:859\u001b[0m, in \u001b[0;36m_enforce_mlflow_datatype\u001b[0;34m(name, values, t)\u001b[0m\n\u001b[1;32m    848\u001b[0m     hint \u001b[38;5;241m=\u001b[39m (\n\u001b[1;32m    849\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m Hint: the type mismatch is likely caused by missing values. \u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m    850\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mInteger columns in python can not represent missing values and are therefore \u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m    856\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mhandling-integers-with-missing-values>`_ for more details.\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m    857\u001b[0m     )\n\u001b[0;32m--> 859\u001b[0m \u001b[38;5;28;01mraise\u001b[39;00m MlflowException(\n\u001b[1;32m    860\u001b[0m     \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mIncompatible input types for column \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mname\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m. \u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m    861\u001b[0m     \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mCan not safely convert \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mvalues\u001b[38;5;241m.\u001b[39mdtype\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m to \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mnumpy_type\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m.\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mhint\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m    862\u001b[0m )\n",
-      "\u001b[0;31mMlflowException\u001b[0m: Incompatible input types for column Attendance. Can not safely convert int64 to float64.",
-      "\nDuring handling of the above exception, another exception occurred:\n",
-      "\u001b[0;31mMlflowException\u001b[0m                           Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[34], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m preds \u001b[38;5;241m=\u001b[39m \u001b[43mmodel\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mpredict\u001b[49m\u001b[43m(\u001b[49m\u001b[43minput_data\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m      3\u001b[0m \u001b[38;5;66;03m#float(preds[0])\u001b[39;00m\n",
-      "File \u001b[0;32m~/.local/share/virtualenvs/mlops-student-performance-Zsm4y_dL/lib/python3.12/site-packages/mlflow/pyfunc/__init__.py:754\u001b[0m, in \u001b[0;36mPyFuncModel.predict\u001b[0;34m(self, data, params)\u001b[0m\n\u001b[1;32m    752\u001b[0m \u001b[38;5;28;01mwith\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_try_get_or_generate_prediction_context() \u001b[38;5;28;01mas\u001b[39;00m context:\n\u001b[1;32m    753\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_update_dependencies_schemas_in_prediction_context(context)\n\u001b[0;32m--> 754\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_predict\u001b[49m\u001b[43m(\u001b[49m\u001b[43mdata\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mparams\u001b[49m\u001b[43m)\u001b[49m\n",
-      "File \u001b[0;32m~/.local/share/virtualenvs/mlops-student-performance-Zsm4y_dL/lib/python3.12/site-packages/mlflow/pyfunc/__init__.py:787\u001b[0m, in \u001b[0;36mPyFuncModel._predict\u001b[0;34m(self, data, params)\u001b[0m\n\u001b[1;32m    785\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39minput_schema \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mmetadata\u001b[38;5;241m.\u001b[39mget_input_schema()\n\u001b[1;32m    786\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mparams_schema \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mmetadata\u001b[38;5;241m.\u001b[39mget_params_schema()\n\u001b[0;32m--> 787\u001b[0m data, params \u001b[38;5;241m=\u001b[39m \u001b[43m_validate_prediction_input\u001b[49m\u001b[43m(\u001b[49m\n\u001b[1;32m    788\u001b[0m \u001b[43m    \u001b[49m\u001b[43mdata\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mparams\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43minput_schema\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mparams_schema\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mloader_module\u001b[49m\n\u001b[1;32m    789\u001b[0m \u001b[43m\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    790\u001b[0m params_arg \u001b[38;5;241m=\u001b[39m inspect\u001b[38;5;241m.\u001b[39msignature(\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_predict_fn)\u001b[38;5;241m.\u001b[39mparameters\u001b[38;5;241m.\u001b[39mget(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mparams\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m    791\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m params_arg \u001b[38;5;129;01mand\u001b[39;00m params_arg\u001b[38;5;241m.\u001b[39mkind \u001b[38;5;241m!=\u001b[39m inspect\u001b[38;5;241m.\u001b[39mParameter\u001b[38;5;241m.\u001b[39mVAR_KEYWORD:\n",
-      "File \u001b[0;32m~/.local/share/virtualenvs/mlops-student-performance-Zsm4y_dL/lib/python3.12/site-packages/mlflow/pyfunc/__init__.py:670\u001b[0m, in \u001b[0;36m_validate_prediction_input\u001b[0;34m(data, params, input_schema, params_schema, flavor)\u001b[0m\n\u001b[1;32m    667\u001b[0m         data \u001b[38;5;241m=\u001b[39m _enforce_schema(data, input_schema, flavor)\n\u001b[1;32m    668\u001b[0m     \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mException\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m e:\n\u001b[1;32m    669\u001b[0m         \u001b[38;5;66;03m# Include error in message for backwards compatibility\u001b[39;00m\n\u001b[0;32m--> 670\u001b[0m         \u001b[38;5;28;01mraise\u001b[39;00m MlflowException\u001b[38;5;241m.\u001b[39minvalid_parameter_value(\n\u001b[1;32m    671\u001b[0m             \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mFailed to enforce schema of data \u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mdata\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m \u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m    672\u001b[0m             \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mwith schema \u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;132;01m{\u001b[39;00minput_schema\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m. \u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m    673\u001b[0m             \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mError: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00me\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m,\n\u001b[1;32m    674\u001b[0m         )\n\u001b[1;32m    675\u001b[0m params \u001b[38;5;241m=\u001b[39m _enforce_params_schema(params, params_schema)\n\u001b[1;32m    676\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m HAS_PYSPARK \u001b[38;5;129;01mand\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(data, SparkDataFrame):\n",
-      "\u001b[0;31mMlflowException\u001b[0m: Failed to enforce schema of data '   Hours_Studied  Attendance Parental_Involvement Access_to_Resources  \\\n0           10.5          95                  0.0                 0.0   \n\n  Extracurricular_Activities  Sleep_Hours  Previous_Scores Motivation_Level  \\\n0                        0.0          7.5             85.5              0.0   \n\n  Internet_Access  Tutoring_Sessions Family_Income Teacher_Quality  \\\n0             0.0                  2           0.0             0.0   \n\n  School_Type Peer_Influence  Physical_Activity Learning_Disabilities  \\\n0         0.0            0.0                3.5                   0.0   \n\n  Parental_Education_Level Distance_from_Home Gender  \n0                      0.0                0.0    0.0  ' with schema '['Hours_Studied': double (required), 'Attendance': double (required), 'Parental_Involvement': double (required), 'Access_to_Resources': double (required), 'Extracurricular_Activities': double (required), 'Sleep_Hours': double (required), 'Previous_Scores': double (required), 'Motivation_Level': double (required), 'Internet_Access': double (required), 'Tutoring_Sessions': double (required), 'Family_Income': double (required), 'Teacher_Quality': double (required), 'School_Type': double (required), 'Peer_Influence': double (required), 'Physical_Activity': double (required), 'Learning_Disabilities': double (required), 'Parental_Education_Level': double (required), 'Distance_from_Home': double (required), 'Gender': double (required)]'. Error: Incompatible input types for column Attendance. Can not safely convert int64 to float64."
-     ]
+     "data": {
+      "text/plain": [
+       "69.47666666666667"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "preds = model.predict(input_data)\n",
     "\n",
-    "#float(preds[0])"
+    "float(preds[0])"
    ]
   },
   {
